2014-06-12  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 12.3.1 Released.

	* AST-2014-005 res_pjsip_pubsub: unauthenticated remote crash in PJSIP
	  pub/sub framework

	  A remotely exploitable crash vulnerability exists in the PJSIP channel
	  driver's pub/sub framework. If an attempt is made to unsubscribe when
	  not currently subscribed and the endpoint's "sub_min_expiry" is set
	  to zero, Asterisk tries to create an expiration timer with zero
	  seconds, which is not allowed, so an assertion raised.

	  The fix was to reject a subscription that is attempting to
	  unsubscribe when not being already subscribed. Asterisk now checks
	  for this situation appropriately and responds with a 400 instead of
	  crashing.

	  ASTERISK-23489 #close

	* AST-2014-006: Add class authorization requirements to MixMonitor AMI
	  commands

	  MixMonitor AMI commands StartMixMonitor and StopMixMonitor lacked
	  class authorization. StopMixMonitor now requires that the manager
	  user either have the call or system class authorization.
	  StartMixMonitor is a slightly larger issue since it can execute shell
	  commands if the right arguments are passed into it, and we consider
	  this a permission escalation.

	  ASTERISK-23609 #close
	  Reported by: Corey Farrell

	* AST-2014-007: Fix DOS by consuming the number of allowed HTTP
	  connections.

	  Simply establishing a TCP connection and never sending anything to
	  the configured HTTP port in http.conf will tie up a HTTP connection.
	  Since there is a maximum number of open HTTP sessions allowed at a
	  time you can block legitimate connections.

	  A similar problem exists if a HTTP request is started but never
	  finished.

	  * Added http.conf session_inactivity timer option to close HTTP
	    connections that aren't doing anything.  Defaults to 30000 ms.

	  * Removed the undocumented manager.conf block-sockets option.  It
	    interferes with TCP/TLS inactivity timeouts.
