@@ -1,98 +1,0 @@
-                                Release Summary
-
-                                asterisk-12.3.2
-
-                                Date: 2014-06-13
-
-                           <asteriskteam@digium.com>
-
-     ----------------------------------------------------------------------
-
-                               Table of Contents
-
-    1. Summary
-    2. Contributors
-    3. Other Changes
-    4. Diffstat
-
-     ----------------------------------------------------------------------
-
-                                    Summary
-
-                                 [Back to Top]
-
-   This release has been made to address one or more security vulnerabilities
-   that have been identified. A security advisory document has been published
-   for each vulnerability that includes additional information. Users of
-   versions of Asterisk that are affected are strongly encouraged to review
-   the advisories and determine what action they should take to protect their
-   systems from these issues.
-
-   Security Advisories: AST-2014-005, AST-2014-006, AST-2014-007,
-   AST-2014-008
-
-   The data in this summary reflects changes that have been made since the
-   previous release, asterisk-12.3.0.
-
-     ----------------------------------------------------------------------
-
-                                  Contributors
-
-                                 [Back to Top]
-
-   This table lists the people who have submitted code, those that have
-   tested patches, as well as those that reported issues on the issue tracker
-   that were resolved in this release. For coders, the number is how many of
-   their patches (of any size) were committed into this release. For testers,
-   the number is the number of times their name was listed as assisting with
-   testing a patch. Finally, for reporters, the number is the number of
-   issues that they reported that were closed by commits that went into this
-   release.
-
-     Coders                   Testers                  Reporters              
-   3 bebuild                
-
-     ----------------------------------------------------------------------
-
-                      Commits Not Associated with an Issue
-
-                                 [Back to Top]
-
-   This is a list of all changes that went into this release that did not
-   directly close an issue from the issue tracker. The commits may have been
-   marked as being related to an issue. If that is the case, the issue
-   numbers are listed here, as well.
-
-   +------------------------------------------------------------------------+
-   | Revision | Author  | Summary                       | Issues Referenced |
-   |----------+---------+-------------------------------+-------------------|
-   | 416058   | bebuild | Create 12.3.2                 |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 416063   | bebuild | Update .version, remove       |                   |
-   |          |         | summaries                     |                   |
-   |----------+---------+-------------------------------+-------------------|
-   |          |         | Merge fix for regression      |                   |
-   | 416075   | bebuild | caused by fix for             |                   |
-   |          |         | AST-2014-007                  |                   |
-   +------------------------------------------------------------------------+
-
-     ----------------------------------------------------------------------
-
-                                Diffstat Results
-
-                                 [Back to Top]
-
-   This is a summary of the changes to the source code that went into this
-   release that was generated using the diffstat utility.
-
- .version                     |    2
- asterisk-12.3.1-summary.html |   74 -----------------------------
- asterisk-12.3.1-summary.txt  |  107 -------------------------------------------
- channels/chan_sip.c          |    6 ++
- include/asterisk/tcptls.h    |   16 ++++++
- main/http.c                  |    3 +
- main/manager.c               |    6 ++
- main/tcptls.c                |   17 ++++++
- 8 files changed, 47 insertions(+), 184 deletions(-)
-
-     ----------------------------------------------------------------------
